--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/McLaren.css">
-    <title>McLaren</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>McLAREN</title>
 </head>
 <body>
+
+  <h1 class="nev">McLaren MP4</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,32 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A McLaren MP4/4 a brit McLaren Formula–1-es csapat 1988-as szezonra fejlesztett versenyautója, amely a sportág történetének egyik legsikeresebb konstrukciója lett. Az autó a Honda V6 turbómotorjával és a korszak két legnagyobb versenyzőjével – Ayrton Sennával és Alain Prosttal – dominálta a szezont, és új mércét állított a technikai hatékonyság és csapatszintű teljesítmény terén.
+
+Műszaki adatok
+- Kategória: Formula–1 (1988)
+- Alváz: Szénszálas monocoque
+- Motor: Honda RA168E – 1.5 literes V6 turbó, kb. 685 lóerő @ 12 500 rpm
+- Sebességváltó: 6 sebességes szekvenciális kézi váltó
+- Hajtás: Hátsókerék-meghajtás
+- Tömeg: kb. 540 kg (FIA minimum)
+- Gumik: Goodyear
+- Üzemanyag: Shell
+
+Pilóták
+- Ayrton Senna – 8 győzelem, világbajnok
+- Alain Prost – 7 győzelem, világbajnoki 2. helyezett
+
+Eredmények a 1988-as szezonban
+- Futamgyőzelmek: 15 győzelem 16 versenyből
+- Pole pozíciók: 15
+- Leggyorsabb körök: 10
+- Világbajnoki címek:
+- Egyéni: Ayrton Senna
+- Konstruktőri: McLaren-Honda
+
+Összegzés
+A McLaren MP4/4 minden idők egyik legdominánsabb Forma–1-es autója volt. A 93,75%-os győzelmi arányával máig rekordot tart a sportág történetében. Az autó nemcsak technikai szempontból volt kiemelkedő, hanem a Senna–Prost rivalizálás révén a Forma–1 egyik legemlékezetesebb korszakának szimbólumává is vált. Az MP4/4 öröksége a mai napig él a motorsport világában.
+ -->
