--- a/Formula 1w/Mercedes.html
+++ b/Formula 1w/Mercedes.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mercedes.css">
-    <title>Mercedes</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>MERCEDES</title>
 </head>
 <body>
+
+  <h1 class="nev">Mercedes-AMG F1 W11 EQ Performance</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,36 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Mercedes-AMG F1 W11 EQ Performance a Mercedes gyári Forma–1-es csapat 2020-as szezonra fejlesztett versenyautója. A modell a W10 utódjaként készült, és a hibrid éra egyik legdominánsabb konstrukciója lett. A W11 segítségével Lewis Hamilton megszerezte hetedik világbajnoki címét, míg a Mercedes zsinórban hetedik konstruktőri bajnoki címét ünnepelhette.
+
+Műszaki adatok
+- Kategória: Formula–1 (2020)
+- Alváz: Szénszálas kompozit monocoque, beépített bukóstruktúrával
+- Motor: Mercedes-AMG F1 M11 EQ Performance – 1.6 literes V6 turbó-hibrid
+- ERS rendszer: MGU-K és MGU-H egységek, lítium-ion akkumulátorral
+- Teljesítmény: kb. 1000+ lóerő (belső égésű + elektromos)
+- Sebességváltó: 8 sebességes szekvenciális, karbonházas
+- Hajtás: Hátsókerék-meghajtás
+- Tömeg: 746 kg (versenyzővel és üzemanyaggal)
+- Gumik: Pirelli
+
+Kiemelkedő technikai újítás
+- DAS rendszer (Dual Axis Steering): A Mercedes egyedülálló kormányrendszert fejlesztett, amely lehetővé tette az első kerekek dőlésszögének menet közbeni állítását. A rendszer segítette a gumik felmelegítését és a kopás optimalizálását, de a 2021-es szabályok betiltották.
+
+Pilóták
+- Lewis Hamilton – 11 győzelem, világbajnok
+- Valtteri Bottas – 2 győzelem, világbajnoki 2. helyezett
+
+Eredmények a 2020-as szezonban
+- Futamgyőzelmek: 13 a 17 versenyből
+- Pole pozíciók: 15
+- Leggyorsabb körök: 9
+- Világbajnoki címek:
+- Egyéni: Lewis Hamilton (7. világbajnoki cím)
+- Konstruktőri: Mercedes-AMG Petronas Formula One Team (7. egymást követő év)
+
+Összegzés
+A Mercedes W11 a hibrid éra egyik legfejlettebb és legsikeresebb Forma–1-es autója volt. A DAS rendszer, a kiváló aerodinamika és a megbízható hajtáslánc révén a csapat dominálta a 2020-as szezont. A W11 nemcsak technikai bravúr, hanem történelmi mérföldkő is volt, amely Lewis Hamilton hetedik világbajnoki címét hozta el, beállítva Michael Schumacher rekordját.
+ -->
