Enhance RedBull.html with RB7 details
Added technical specifications and summary for Red Bull RB7.

--- a/Formula 1w/RedBull.html
+++ b/Formula 1w/RedBull.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/RedBull.css">
-    <title>RedBull</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>REDBULL</title>
 </head>
 <body>
+
+  <h1 class="nev">RedBull RB7</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,33 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Red Bull RB7 a Red Bull Racing által fejlesztett Formula–1-es versenyautó, amelyet a 2011-es világbajnoki szezonban használtak. A modell az Adrian Newey által tervezett RB6 utódja, és a csapat dominanciáját tovább erősítette. Az RB7 a szezon leggyorsabb és legjobban kiegyensúlyozott autója volt, különösen az aerodinamikai hatékonyság és a kipufogógáz-alapú diffúzor terén.
+
+Műszaki adatok
+- Kategória: Formula–1 (2011)
+- Alváz: Szénszálas kompozit monocoque
+- Motor: Renault RS27 – 2.4 literes V8 szívó
+- Teljesítmény: kb. 750 lóerő @ 18 000 rpm
+- Sebességváltó: 7 sebességes szekvenciális, karbonházas
+- Hajtás: Hátsókerék-meghajtás
+- Tömeg: 640 kg (FIA minimum)
+- Gumik: Pirelli
+- Kiemelt technológia: Kipufogógáz-alapú diffúzor (blown diffuser), KERS rendszer
+
+Pilóták
+- Sebastian Vettel – 11 győzelem, világbajnok
+- Mark Webber – 3. hely az egyéni bajnokságban
+
+Eredmények a 2011-es szezonban
+- Futamgyőzelmek: 12 a 19 versenyből
+- Pole pozíciók: 18 (Vettel: 15)
+- Dobogós helyezések: 27
+- Világbajnoki címek:
+- Egyéni: Sebastian Vettel (2. világbajnoki cím)
+- Konstruktőri: Red Bull Racing-Renault (2. egymást követő év)
+
+Összegzés
+A Red Bull RB7 a 2011-es szezon abszolút domináns autója volt, amely technikai szempontból is mérföldkőnek számított. Az Adrian Newey által tervezett aerodinamikai csomag, a kipufogógáz-alapú diffúzor és a kiváló mechanikai tapadás révén az RB7 minden pályán versenyképes volt. Sebastian Vettel magabiztosan szerezte meg második világbajnoki címét, míg a Red Bull Racing megerősítette helyét a sportág élvonalában.
+ -->
