Update Renault page with R24 details and specifications
Added detailed information about the Renault R24, including technical specifications, pilot details, and season results.

--- a/Formula 1w/Renault.html
+++ b/Formula 1w/Renault.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Renault.css">
-    <title>Renault</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>RENAULT</title>
 </head>
 <body>
+
+  <h1 class="nev">Renault R24</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,34 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Renault R24 a Renault F1 Team 2004-es szezonra fejlesztett Formula–1-es versenyautója volt. A konstrukció a 2003-as R23B továbbfejlesztett változata, amelyet a csapat technikai stábja – Robert Bell (technikai igazgató), Mark Smith (vezető tervező) és Dino Toso (aerodinamikai vezető) – készített. A Renault célja az volt, hogy stabil dobogós szereplővé váljon, és előkészítse a terepet a 2005-ös világbajnoki címhez.
+
+Műszaki adatok
+- Alváz: Szénszálas kompozit monocoque
+- Motor: Renault RS24 – 3.0 literes V10, 72° hengerszög
+- Teljesítmény: kb. 900 lóerő @ 19 000 rpm
+- Sebességváltó: 6 sebességes szekvenciális, titán házban
+- Hajtás: Hátsókerék-meghajtás
+- Tömeg: 605 kg (FIA minimum)
+- Gumik: Michelin
+- Üzemanyag: Elf
+Az új motor elrendezés lehetővé tette a keskenyebb oldalsó légbeömlőket és a hátsó aerodinamikai csomag optimalizálását. A csapat jelentős szélcsatorna-fejlesztéseket hajtott végre, hogy kompenzálja a 2004-es szabályváltozások miatti leszorítóerő-veszteséget.
+
+Pilóták
+- Fernando Alonso – 4. hely az egyéni bajnokságban
+- Jarno Trulli – 6. hely, győzelem Monacóban
+- Jacques Villeneuve – szezon végi beugró (3 futam)
+
+Eredmények a 2004-es szezonban
+- Futamgyőzelem: 1 (Monaco – Jarno Trulli)
+- Dobogós helyezések: 8
+- Pole pozíció: 1 (Monaco)
+- Konstruktőri helyezés: 3. hely (105 pont)
+
+Összegzés
+A Renault R24 stabil és versenyképes konstrukció volt, amely megalapozta a csapat 2005-ös világbajnoki sikerét. Jarno Trulli monacói győzelme a Renault első futamgyőzelme volt a modern érában, míg Fernando Alonso folyamatos pontszerzése révén a csapat a Ferrari és BAR mögött a 3. helyen zárt. A R24 technikai fejlesztései és megbízhatósága kulcsszerepet játszottak a Renault hosszú távú Forma–1-es stratégiájában.
+
+
+ -->
