--- a/DTMw/Bently.html
+++ b/DTMw/Bently.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Bently.css">
-    <title>Bently</title>
+     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+    <title>BENTLY</title>
 </head>
 <body>
+
+  <h1 class="nev">Bently Continental GT3</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,31 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Bentley Continental GT3 a Bentley Motorsport és az M-Sport közös fejlesztése, amely az utcai Continental GT alapjaira épül, de teljesen versenyspecifikus kialakítást kapott. A GT3 szabályrendszer szerint homologizált autó célja, hogy a Bentley visszatérjen a nemzetközi versenypályákra, a Le Mans-i győzelem (2003 – Speed 8) után újra sporteredményeket szerezzen.
+
+Műszaki adatok
+- Kategória: GT3 (FIA és SRO homologizáció)
+- Motor: 4.0 literes V8 biturbó (Cosworth vezérléssel, száraz karteres kenéssel)
+- Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)
+- Sebességváltó: 6 sebességes szekvenciális, pneumatikus lapátváltó
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Alumínium szerkezet, szénszálas elemekkel, bukókerettel
+- Tömeg: kb. 1300 kg
+- Felfüggesztés: Elöl-hátul dupla keresztlengőkar, állítható lengéscsillapítókkal
+- Fékrendszer: Brembo szellőztetett acéltárcsák, ABS-szel
+
+Versenytörténet
+- Debütálás: 2013 – Goodwood Festival of Speed, majd Gulf 12 Hours (4. hely)
+- Fő bajnokságok: Blancpain GT Series, British GT, Intercontinental GT Challenge
+- Csapatok: Bentley Team M-Sport, K-PAX Racing, Team Parker Racing
+- Legnagyobb sikerek:
+- Silverstone győzelem (Blancpain Endurance)
+- Paul Ricard győzelem
+- Bathurst 12h dobogós helyezések
+- Pikes Peak GT3-specifikus rekordkísérlet
+
+Összegzés
+A Bentley Continental GT3 egy különleges versenyautó, amely a luxus és a teljesítmény határán egyensúlyoz. Bár a Bentley nem tartozik a klasszikus GT3 márkák közé, a Continental GT3 bebizonyította, hogy a márka képes versenyképes konstrukciót építeni. A Cosworth által optimalizált V8-as motor, az M-Sport mérnöki háttér és az aerodinamikai fejlesztések révén a GT3 mezőnyben is megállta a helyét.
+ -->
