--- a/DTMw/BMW.html
+++ b/DTMw/BMW.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/BMW.css">
+     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
     <title>BMW</title>
 </head>
 <body>
+
+  <h1 class="nev">BMW M3 GTR</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,34 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A BMW M3 GTR a bajor gyártó egyik legikonikusabb GT-versenyautója, amelyet kifejezetten az American Le Mans Series (ALMS) GT osztályába fejlesztettek. A 2001-es szezonban debütált, és különlegessége, hogy a hagyományos soros hathengeres motor helyett egy teljesen új fejlesztésű V8-as erőforrást kapott.
+
+Műszaki adatok
+- Kategória: GT (ALMS)
+- Motor: BMW P60B40 – 4.0 literes V8, szívó
+- Teljesítmény: kb. 493 lóerő @ 7500 rpm
+- Sebességváltó: 6 sebességes szekvenciális
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Szénszálas elemekkel könnyített E46-alapú váz
+- Tömeg: kb. 1100 kg
+- Felfüggesztés: Állítható versenyfutómű
+- Gumik: Michelin versenygumik
+A V8-as motor nemcsak nagyobb teljesítményt, hanem jobb súlyelosztást is biztosított, különösen hosszútávú versenyeken.
+
+Versenytörténet
+- Debütálás: 2001 ALMS – Sebring 12h (dobogós helyezés)
+- Fő versenyzők: Jörg Müller, JJ Lehto, Hans-Joachim Stuck
+- 2001 ALMS szezon:
+- 7 futamgyőzelem
+- Gyártói bajnoki cím (GT osztály)
+- Egyéni bajnoki cím: Jörg Müller
+A Porsche 911 GT3 RSR elleni küzdelemben a BMW M3 GTR technikai fölénye hamar megmutatkozott, különösen a gyorsabb pályákon.
+
+Szabályváltozás és visszavonás
+A 2002-es szezonra az ALMS szabályai szigorodtak: a gyártóknak legalább 100 utcai példányt és 1000 motort kellett volna gyártaniuk a homologizációhoz. A BMW nem vállalta ezt, így a GTR-t visszavonták a sorozatból.
+
+Összegzés
+A BMW M3 GTR rövid, de annál emlékezetesebb pályafutása során technikai fölényével és karakteres megjelenésével legendává vált a GT-versenyzés világában. A V8-as motor, a könnyített karosszéria és a versenyképes futómű révén a GTR a BMW Motorsport egyik legnagyobb dobása lett a 2000-es évek elején.
+ -->
