--- a/DTMw/Mamba.html
+++ b/DTMw/Mamba.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mamba.css">
-    <title>Mercedes</title>
+     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+    <title>MERCEDES</title>
 </head>
 <body>
+
+  <h1 class="nev">MAMBA</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -23,3 +27,32 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A MANN-FILTER Mamba a Mercedes-AMG GT3 versenyautó egyedi változata, amelyet a német MANN-FILTER szponzorál. A modell a GT3 szabályrendszer szerint épült, és különleges sárga-zöld kígyóbőr mintás festése miatt vált ismertté. A „Mamba” név a dizájnra és a versenypályán mutatott agresszív teljesítményre utal.
+
+Műszaki adatok
+- Kategória: GT3 (FIA homologizáció)
+- Alapmodell: Mercedes-AMG GT3 EVO
+- Motor: 6.3 literes V8 szívó (AMG M159)
+- Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)
+- Sebességváltó: 6 sebességes szekvenciális, lapátváltóval
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Alumínium váz, szénszálas aerodinamikai elemek
+- Tömeg: kb. 1300 kg
+- Gumik: Michelin vagy Hankook (sorozattól függően)
+
+Versenyprogramok
+- DTM (2024–2025): Mercedes-AMG Team MANN-FILTER, pilóta: Lucas Auer
+- GT World Challenge Europe: Winward Racing – #48 autó, pilóták: Maro Engel, Matteo Cairoli, Lucas Auer
+- Intercontinental GT Challenge (korábban): GruppeM Racing – pilóták: Raffaele Marciello, Mik Grenier, Maro Engel
+A Mamba több kontinensen versenyez, például Bathurst (Ausztrália), Spa (Belgium), Kyalami (Dél-Afrika), Indianapolis (USA), Abu Dhabi (Egyesült Arab Emírségek).
+
+Különlegességek
+- Dizájn: Sárga-zöld kígyóbőr mintás festés, agresszív „fogazott” hűtőrács
+- Marketing: Kultikus státusz a rajongók körében, „Beast Mode ON” kampány
+- Technikai partner: AMG Customer Racing, MANN+HUMMEL
+
+Összegzés
+A Mercedes-AMG GT3 MANN-FILTER Mamba nemcsak technikailag versenyképes GT3 autó, hanem vizuálisan is az egyik legemlékezetesebb versenygép. A Mamba név és dizájn egyedi identitást adott a csapatnak, amely a DTM és GT bajnokságokban is komoly eredményeket ért el. A MANN-FILTER támogatásával a projekt nemcsak motorsport, hanem márkaépítési szempontból is sikeres.
+ -->
