--- a/DTMw/Mercedes.html
+++ b/DTMw/Mercedes.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mercedes.css">
-    <title>Mercedes</title>
+     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+    <title>MERCEDES</title>
 </head>
 <body>
+
+  <h1 class="nev">Mercedes-Benz 190E W201</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,30 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Mercedes 190E Evo II a W201-es sorozat csúcsváltozata, amelyet kifejezetten a DTM homologizációs szabályai szerint fejlesztettek. A modell 1990-ben mutatkozott be a Genfi Autószalonon, és 1992-ben versenyzett utoljára a DTM-ben. A versenyváltozatot az AMG készítette fel, míg a Cosworth a motorfejlesztésért felelt.
+
+Műszaki adatok (DTM-versenyváltozat)
+- Kategória: DTM (Gruppe A)
+- Motor: 2.5 literes soros 4 hengeres, 16 szelepes Cosworth fejlesztés
+- Teljesítmény: kb. 330–370 lóerő @ 9500 rpm
+- Sebességváltó: 5 sebességes szekvenciális (Getrag)
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Szélesített sárvédők, nagyméretű hátsó szárny, szénszálas elemek
+- Tömeg: kb. 980–1050 kg
+- Gumik: Dunlop vagy Michelin (szezonfüggő)
+A versenyváltozat jelentősen eltért az utcai homologizációs modelltől: könnyített karosszéria, bukócső, versenyfutómű, és teljesen átalakított aerodinamikai csomag jellemezte.
+
+Versenytörténet
+- Debütálás: 1990 DTM szezon
+- Fő versenyzők: Klaus Ludwig, Bernd Schneider, Roland Asch
+- Legnagyobb riválisok: BMW M3 E30, Audi V8 quattro
+- Eredmények:
+- Több futamgyőzelem és dobogós helyezés
+- 1992-ben Klaus Ludwig DTM bajnok lett az Evo II-vel
+A 190E Evo II a BMW M3 E30 ellen vívott legendás csatákat, különösen a Hockenheimringen és a Norisringen. A Cosworth motor magas fordulatszámon működött, míg az AMG futómű kiváló tapadást biztosított.
+
+Összegzés
+A Mercedes-Benz 190E Evo II DTM a márka motorsport-történetének egyik legfontosabb mérföldköve. A modell nemcsak technikai szempontból volt kiemelkedő, hanem a DTM aranykorának szimbólumává is vált. A Cosworth–AMG együttműködés, az agresszív aerodinamika és a versenyképes teljesítmény révén a 190E Evo II örökre beírta magát a túraautózás történetébe.
+ -->
