--- a/DTMw/Audi.html
+++ b/DTMw/Audi.html
@@ -8,10 +8,13 @@
     <title>AUDI</title>
 </head>
 <body>
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+  <h1>Audi RS 5 DTM Turbo</h1>
 
-  <h1 class="nev">Audi RS 5 DTM Turbo</h1>
-
-    <!-- 3D forgó képváltó -->
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
@@ -26,36 +29,44 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A 2019-es Audi RS5 DTM a gyártó első turbómotoros DTM-autója volt, amely a korábbi V8-as szívómotoros korszakot váltotta fel. Az új Class 1 szabályok értelmében a versenyautók 2.0 literes, négyhengeres turbómotorral készültek, amely jelentős teljesítménynövekedést és hatékonyabb aerodinamikát tett lehetővé.
+  <section class="info-section">
+  <p>A 2019-es Audi RS5 DTM a gyártó első turbómotoros DTM-autója volt, amely a korábbi V8-as szívómotoros korszakot váltotta fel. Az új Class 1 szabályok értelmében a versenyautók 2.0 literes, négyhengeres turbómotorral készültek, amely jelentős teljesítménynövekedést és hatékonyabb aerodinamikát tett lehetővé.</p>
 
 Műszaki adatok
-- Kategória: DTM – Class 1 szabályrendszer
-- Motor: 2.0 literes soros 4 hengeres turbó (Audi RC8)
-- Teljesítmény: 610 lóerő + 30 lóerő „push-to-pass” rendszerrel
-- Sebességváltó: 6 sebességes szekvenciális
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szénszálas kompozit monocoque
-- Tömeg: kb. 986 kg (verseny-specifikáció)
-- Gumik: Hankook
-A turbómotoros konfiguráció nemcsak nagyobb teljesítményt, hanem alacsonyabb fogyasztást és jobb gyorsulást biztosított. Az aerodinamikai csomag is jelentősen módosult, különösen az első splitter és a hátsó szárny kialakításában.
+<ul>
+  
+    <li> Kategória: DTM – Class 1 szabályrendszer</li>
+    <li> Motor: 2.0 literes soros 4 hengeres turbó (Audi RC8)</li>
+    <li> Teljesítmény: 610 lóerő + 30 lóerő „push-to-pass” rendszerrel</li>
+    <li> Sebességváltó: 6 sebességes szekvenciális</li>
+    <li> Hajtás: Hátsókerék-meghajtás</li>
+    <li> Karosszéria: Szénszálas kompozit monocoque</li>
+    <li> Tömeg: kb. 986 kg (verseny-specifikáció)</li>
+    <li> Gumik: Hankook</li>
+  
+</ul>
+<p>A turbómotoros konfiguráció nemcsak nagyobb teljesítményt, hanem alacsonyabb fogyasztást és jobb gyorsulást biztosított. Az aerodinamikai csomag is jelentősen módosult, különösen az első splitter és a hátsó szárny kialakításában.</p>
 
-Versenyzők és csapatok
+<p>Versenyzők és csapatok</p>
 - Gyári csapatok: Abt Sportsline, Phoenix Racing, Team Rosberg
 - Versenyzők: René Rast, Nico Müller, Mike Rockenfeller, Loïc Duval, Jamie Green, Robin Frijns
 René Rast volt a szezon legdominánsabb versenyzője, aki 7 győzelmet és 5 pole pozíciót szerzett, ezzel megnyerve az egyéni bajnoki címet.
 
-Eredmények a 2019-es szezonban
+<p>Eredmények a 2019-es szezonban</p>
 - Futamgyőzelmek: 12 a 18 versenyből
 - Pole pozíciók: 12
 - Leggyorsabb körök: 10
 - Konstruktőri bajnoki cím: Audi Sport
 - Egyéni bajnok: René Rast
-Az Audi RS5 DTM 2019-ben minden fontos bajnoki címet megszerzett: egyéni, csapat és gyártói szinten is. A konstrukció technikai fölénye és megbízhatósága révén az Audi dominálta a szezont.
+<p>Az Audi RS5 DTM 2019-ben minden fontos bajnoki címet megszerzett: egyéni, csapat és gyártói szinten is. A konstrukció technikai fölénye és megbízhatósága révén az Audi dominálta a szezont.</p>
 
-Összegzés
+<p>Összegzés</p>
 A 2019-es Audi RS5 DTM a turbókorszak nyitányaként új mércét állított a DTM-ben. A modell nemcsak technikai szempontból volt kiemelkedő, hanem versenyeredményeivel is történelmet írt. Az Audi ezzel a konstrukcióval megerősítette pozícióját a túraautó-versenyzés élvonalában, és a Class 1 szabályrendszer egyik legsikeresebb autójává vált.
- -->
+
+</section>
+
+</body>
+</html>
+
+
+ 
