--- a/DTMw/BMW.html
+++ b/DTMw/BMW.html
@@ -8,7 +8,10 @@
     <title>BMW</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">BMW M3 GTR</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,25 +29,23 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A BMW M3 GTR a bajor gyártó egyik legikonikusabb GT-versenyautója, amelyet kifejezetten az American Le Mans Series (ALMS) GT osztályába fejlesztettek. A 2001-es szezonban debütált, és különlegessége, hogy a hagyományos soros hathengeres motor helyett egy teljesen új fejlesztésű V8-as erőforrást kapott.
+  <section class="info-section"><p>A BMW M3 GTR a bajor gyártó egyik legikonikusabb GT-versenyautója, amelyet kifejezetten az American Le Mans Series (ALMS) GT osztályába fejlesztettek. A 2001-es szezonban debütált, és különlegessége, hogy a hagyományos soros hathengeres motor helyett egy teljesen új fejlesztésű V8-as erőforrást kapott.</p>
 
 Műszaki adatok
-- Kategória: GT (ALMS)
-- Motor: BMW P60B40 – 4.0 literes V8, szívó
-- Teljesítmény: kb. 493 lóerő @ 7500 rpm
-- Sebességváltó: 6 sebességes szekvenciális
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szénszálas elemekkel könnyített E46-alapú váz
-- Tömeg: kb. 1100 kg
-- Felfüggesztés: Állítható versenyfutómű
-- Gumik: Michelin versenygumik
-A V8-as motor nemcsak nagyobb teljesítményt, hanem jobb súlyelosztást is biztosított, különösen hosszútávú versenyeken.
+<ul>
+  <li> Kategória: GT (ALMS)</li>
+  <li> Motor: BMW P60B40 – 4.0 literes V8, szívó</li>
+  <li> Teljesítmény: kb. 493 lóerő @ 7500 rpm</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li>Karosszéria: Szénszálas elemekkel könnyített E46-alapú váz</li>
+  <li> Tömeg: kb. 1100 kg</li>
+  <li> Felfüggesztés: Állítható versenyfutómű</li>
+  <li> Gumik: Michelin versenygumik</li>
+  <li>A V8-as motor nemcsak nagyobb teljesítményt, hanem jobb súlyelosztást is biztosított, különösen hosszútávú versenyeken.</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Debütálás: 2001 ALMS – Sebring 12h (dobogós helyezés)
 - Fő versenyzők: Jörg Müller, JJ Lehto, Hans-Joachim Stuck
 - 2001 ALMS szezon:
@@ -53,9 +54,17 @@ Versenytörténet
 - Egyéni bajnoki cím: Jörg Müller
 A Porsche 911 GT3 RSR elleni küzdelemben a BMW M3 GTR technikai fölénye hamar megmutatkozott, különösen a gyorsabb pályákon.
 
-Szabályváltozás és visszavonás
+<p>Szabályváltozás és visszavonás</p>
 A 2002-es szezonra az ALMS szabályai szigorodtak: a gyártóknak legalább 100 utcai példányt és 1000 motort kellett volna gyártaniuk a homologizációhoz. A BMW nem vállalta ezt, így a GTR-t visszavonták a sorozatból.
 
-Összegzés
+<p>Összegzés</p>
 A BMW M3 GTR rövid, de annál emlékezetesebb pályafutása során technikai fölényével és karakteres megjelenésével legendává vált a GT-versenyzés világában. A V8-as motor, a könnyített karosszéria és a versenyképes futómű révén a GTR a BMW Motorsport egyik legnagyobb dobása lett a 2000-es évek elején.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
