--- a/DTMw/Bently.html
+++ b/DTMw/Bently.html
@@ -8,7 +8,10 @@
     <title>BENTLY</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Bently Continental GT3</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,24 +29,22 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Bentley Continental GT3 a Bentley Motorsport és az M-Sport közös fejlesztése, amely az utcai Continental GT alapjaira épül, de teljesen versenyspecifikus kialakítást kapott. A GT3 szabályrendszer szerint homologizált autó célja, hogy a Bentley visszatérjen a nemzetközi versenypályákra, a Le Mans-i győzelem (2003 – Speed 8) után újra sporteredményeket szerezzen.
+  <section class="info-section"><p>A Bentley Continental GT3 a Bentley Motorsport és az M-Sport közös fejlesztése, amely az utcai Continental GT alapjaira épül, de teljesen versenyspecifikus kialakítást kapott. A GT3 szabályrendszer szerint homologizált autó célja, hogy a Bentley visszatérjen a nemzetközi versenypályákra, a Le Mans-i győzelem (2003 – Speed 8) után újra sporteredményeket szerezzen.</p>
 
 Műszaki adatok
-- Kategória: GT3 (FIA és SRO homologizáció)
-- Motor: 4.0 literes V8 biturbó (Cosworth vezérléssel, száraz karteres kenéssel)
-- Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)
-- Sebességváltó: 6 sebességes szekvenciális, pneumatikus lapátváltó
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Alumínium szerkezet, szénszálas elemekkel, bukókerettel
-- Tömeg: kb. 1300 kg
-- Felfüggesztés: Elöl-hátul dupla keresztlengőkar, állítható lengéscsillapítókkal
-- Fékrendszer: Brembo szellőztetett acéltárcsák, ABS-szel
+<ul>
+  <li> Kategória: GT3 (FIA és SRO homologizáció)</li>
+  <li> Motor: 4.0 literes V8 biturbó (Cosworth vezérléssel, száraz karteres kenéssel)</li>
+  <li> Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális, pneumatikus lapátváltó</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Alumínium szerkezet, szénszálas elemekkel, bukókerettel</li>
+  <li> Tömeg: kb. 1300 kg</li>
+  <li> Felfüggesztés: Elöl-hátul dupla keresztlengőkar, állítható lengéscsillapítókkal</li>
+  <li> Fékrendszer: Brembo szellőztetett acéltárcsák, ABS-szel</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Debütálás: 2013 – Goodwood Festival of Speed, majd Gulf 12 Hours (4. hely)
 - Fő bajnokságok: Blancpain GT Series, British GT, Intercontinental GT Challenge
 - Csapatok: Bentley Team M-Sport, K-PAX Racing, Team Parker Racing
@@ -53,6 +54,13 @@ Versenytörténet
 - Bathurst 12h dobogós helyezések
 - Pikes Peak GT3-specifikus rekordkísérlet
 
-Összegzés
+<p>Összegzés</p>
 A Bentley Continental GT3 egy különleges versenyautó, amely a luxus és a teljesítmény határán egyensúlyoz. Bár a Bentley nem tartozik a klasszikus GT3 márkák közé, a Continental GT3 bebizonyította, hogy a márka képes versenyképes konstrukciót építeni. A Cosworth által optimalizált V8-as motor, az M-Sport mérnöki háttér és az aerodinamikai fejlesztések révén a GT3 mezőnyben is megállta a helyét.
- -->
+
+</section>
+ 
+
+</body>
+</html>
+
+
