--- a/DTMw/Mamba.html
+++ b/DTMw/Mamba.html
@@ -8,7 +8,10 @@
     <title>MERCEDES</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">MAMBA</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,34 +28,40 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A MANN-FILTER Mamba a Mercedes-AMG GT3 versenyautó egyedi változata, amelyet a német MANN-FILTER szponzorál. A modell a GT3 szabályrendszer szerint épült, és különleges sárga-zöld kígyóbőr mintás festése miatt vált ismertté. A „Mamba” név a dizájnra és a versenypályán mutatott agresszív teljesítményre utal.
+  <section class="info-section"><p>A MANN-FILTER Mamba a Mercedes-AMG GT3 versenyautó egyedi változata, amelyet a német MANN-FILTER szponzorál. A modell a GT3 szabályrendszer szerint épült, és különleges sárga-zöld kígyóbőr mintás festése miatt vált ismertté. A „Mamba” név a dizájnra és a versenypályán mutatott agresszív teljesítményre utal.</p>
 
 Műszaki adatok
-- Kategória: GT3 (FIA homologizáció)
-- Alapmodell: Mercedes-AMG GT3 EVO
-- Motor: 6.3 literes V8 szívó (AMG M159)
-- Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)
-- Sebességváltó: 6 sebességes szekvenciális, lapátváltóval
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Alumínium váz, szénszálas aerodinamikai elemek
-- Tömeg: kb. 1300 kg
-- Gumik: Michelin vagy Hankook (sorozattól függően)
+<ul>
+  <li> Kategória: GT3 (FIA homologizáció)</li>
+  <li> Alapmodell: Mercedes-AMG GT3 EVO</li>
+  <li> Motor: 6.3 literes V8 szívó (AMG M159)</li>
+  <li> Teljesítmény: kb. 550–600 lóerő (BoP szerint változik)</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális, lapátváltóval</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Alumínium váz, szénszálas aerodinamikai elemek</li>
+  <li> Tömeg: kb. 1300 kg</li>
+  <li> Gumik: Michelin vagy Hankook (sorozattól függően)</li>
+</ul>
 
-Versenyprogramok
+<p>Versenyprogramok</p>
 - DTM (2024–2025): Mercedes-AMG Team MANN-FILTER, pilóta: Lucas Auer
 - GT World Challenge Europe: Winward Racing – #48 autó, pilóták: Maro Engel, Matteo Cairoli, Lucas Auer
 - Intercontinental GT Challenge (korábban): GruppeM Racing – pilóták: Raffaele Marciello, Mik Grenier, Maro Engel
 A Mamba több kontinensen versenyez, például Bathurst (Ausztrália), Spa (Belgium), Kyalami (Dél-Afrika), Indianapolis (USA), Abu Dhabi (Egyesült Arab Emírségek).
 
-Különlegességek
+<p>Különlegességek</p>
 - Dizájn: Sárga-zöld kígyóbőr mintás festés, agresszív „fogazott” hűtőrács
 - Marketing: Kultikus státusz a rajongók körében, „Beast Mode ON” kampány
 - Technikai partner: AMG Customer Racing, MANN+HUMMEL
 
-Összegzés
+<p>Összegzés</p>
 A Mercedes-AMG GT3 MANN-FILTER Mamba nemcsak technikailag versenyképes GT3 autó, hanem vizuálisan is az egyik legemlékezetesebb versenygép. A Mamba név és dizájn egyedi identitást adott a csapatnak, amely a DTM és GT bajnokságokban is komoly eredményeket ért el. A MANN-FILTER támogatásával a projekt nemcsak motorsport, hanem márkaépítési szempontból is sikeres.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
