--- a/DTMw/Mercedes.html
+++ b/DTMw/Mercedes.html
@@ -8,7 +8,10 @@
     <title>MERCEDES</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Mercedes-Benz 190E W201</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,24 +29,22 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Mercedes 190E Evo II a W201-es sorozat csúcsváltozata, amelyet kifejezetten a DTM homologizációs szabályai szerint fejlesztettek. A modell 1990-ben mutatkozott be a Genfi Autószalonon, és 1992-ben versenyzett utoljára a DTM-ben. A versenyváltozatot az AMG készítette fel, míg a Cosworth a motorfejlesztésért felelt.
+  <section class="info-section"><p>A Mercedes 190E Evo II a W201-es sorozat csúcsváltozata, amelyet kifejezetten a DTM homologizációs szabályai szerint fejlesztettek. A modell 1990-ben mutatkozott be a Genfi Autószalonon, és 1992-ben versenyzett utoljára a DTM-ben. A versenyváltozatot az AMG készítette fel, míg a Cosworth a motorfejlesztésért felelt.</p>
 
 Műszaki adatok (DTM-versenyváltozat)
-- Kategória: DTM (Gruppe A)
-- Motor: 2.5 literes soros 4 hengeres, 16 szelepes Cosworth fejlesztés
-- Teljesítmény: kb. 330–370 lóerő @ 9500 rpm
-- Sebességváltó: 5 sebességes szekvenciális (Getrag)
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szélesített sárvédők, nagyméretű hátsó szárny, szénszálas elemek
-- Tömeg: kb. 980–1050 kg
-- Gumik: Dunlop vagy Michelin (szezonfüggő)
-A versenyváltozat jelentősen eltért az utcai homologizációs modelltől: könnyített karosszéria, bukócső, versenyfutómű, és teljesen átalakított aerodinamikai csomag jellemezte.
+<ul>
+  <li> Kategória: DTM (Gruppe A)</li>
+  <li> Motor: 2.5 literes soros 4 hengeres, 16 szelepes Cosworth fejlesztés</li>
+  <li> Teljesítmény: kb. 330–370 lóerő @ 9500 rpm</li>
+  <li> Sebességváltó: 5 sebességes szekvenciális (Getrag)</li>
+  <li>Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Szélesített sárvédők, nagyméretű hátsó szárny, szénszálas elemek</li>
+  <li> Tömeg: kb. 980–1050 kg</li>
+  <li> Gumik: Dunlop vagy Michelin (szezonfüggő)</li>
+  <li>A versenyváltozat jelentősen eltért az utcai homologizációs modelltől: könnyített karosszéria, bukócső, versenyfutómű, és teljesen átalakított aerodinamikai csomag jellemezte.</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Debütálás: 1990 DTM szezon
 - Fő versenyzők: Klaus Ludwig, Bernd Schneider, Roland Asch
 - Legnagyobb riválisok: BMW M3 E30, Audi V8 quattro
@@ -52,6 +53,12 @@ Versenytörténet
 - 1992-ben Klaus Ludwig DTM bajnok lett az Evo II-vel
 A 190E Evo II a BMW M3 E30 ellen vívott legendás csatákat, különösen a Hockenheimringen és a Norisringen. A Cosworth motor magas fordulatszámon működött, míg az AMG futómű kiváló tapadást biztosított.
 
-Összegzés
-A Mercedes-Benz 190E Evo II DTM a márka motorsport-történetének egyik legfontosabb mérföldköve. A modell nemcsak technikai szempontból volt kiemelkedő, hanem a DTM aranykorának szimbólumává is vált. A Cosworth–AMG együttműködés, az agresszív aerodinamika és a versenyképes teljesítmény révén a 190E Evo II örökre beírta magát a túraautózás történetébe.
- -->
+<p>Összegzés</p>
+A Mercedes-Benz 190E Evo II DTM a márka motorsport-történetének egyik legfontosabb mérföldköve. A modell nemcsak technikai szempontból volt kiemelkedő, hanem a DTM aranykorának szimbólumává is vált. A Cosworth–AMG együttműködés, az agresszív aerodinamika és a versenyképes teljesítmény révén a 190E Evo II örökre beírta magát a túraautózás történetébe.</section>
+
+
+</body>
+</html>
+
+
+ 
