--- a/DTMw/Porsche g.html
+++ b/DTMw/Porsche g.html
@@ -8,7 +8,10 @@
     <title>PORSCHE</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">REXY</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,42 +29,48 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A „Rexy” az AO Racing által indított Porsche 911 GT3 R versenyautó beceneve, amely a GTD PRO kategóriában szerepel az IMSA WeatherTech SportsCar Championship sorozatban. A név és a dizájn egyaránt a Tyrannosaurus Rex-re utal: a versenyautó sárga-zöld dinoszaurusz mintás festést kapott, fogakkal díszített hűtőráccsal és „aranyfoggal” a győzelmek jelölésére.
+  <section class="info-section"><p>A „Rexy” az AO Racing által indított Porsche 911 GT3 R versenyautó beceneve, amely a GTD PRO kategóriában szerepel az IMSA WeatherTech SportsCar Championship sorozatban. A név és a dizájn egyaránt a Tyrannosaurus Rex-re utal: a versenyautó sárga-zöld dinoszaurusz mintás festést kapott, fogakkal díszített hűtőráccsal és „aranyfoggal” a győzelmek jelölésére.</p>
 
 Műszaki adatok
-- Kategória: GTD PRO (IMSA)
-- Alapmodell: Porsche 911 GT3 R (992 generáció)
-- Motor: 4.2 literes szívó boxermotor (6 hengeres)
-- Teljesítmény: kb. 565 lóerő (BoP szerint változik)
-- Sebességváltó: 6 sebességes szekvenciális, lapátváltóval
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szénszálas aerodinamikai elemek, GT3-specifikáció
-- Gumik: Michelin
+<ul>
+  <li> Kategória: GTD PRO (IMSA)</li>
+  <li> Alapmodell: Porsche 911 GT3 R (992 generáció)</li>
+  <li> Motor: 4.2 literes szívó boxermotor (6 hengeres)</li>
+  <li> Teljesítmény: kb. 565 lóerő (BoP szerint változik)</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális, lapátváltóval</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Szénszálas aerodinamikai elemek, GT3-specifikáció</li>
+  <li> Gumik: Michelin</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - 2023 Le Mans 24h: Porsche 911 RSR-19 #56 „Rexy” – 7. hely LMGTE-Am kategóriában (Project 1 – AO Racing)
 - 2024 IMSA szezon:
 - Indianapolis „Battle on the Bricks”: győzelem – utolsó helyről indulva elsőként ért célba
 - Detroit GT Classic: második egymást követő győzelem, aranyfoggal ünnepelve
 - Bajnoki cím: GTD PRO kategóriában csapat- és egyéni bajnoki győzelem
 
-Pilóták (2024–2025)
+<p>Pilóták (2024–2025)</p>
 - PJ Hyett – csapattulajdonos és versenyző
 - Sebastian Priaulx
 - Laurin Heinrich
 - Gunnar Jeannette – korábbi Le Mans-pilóta
 
-Különlegességek
+<p>Különlegességek</p>
 - Dizájn: Tyrannosaurus Rex mintás festés, fogazott hűtőrács, aranyfogak a győzelmek jelölésére
 - Marketing: „RSRawr” néven ismert, rajongói kedvenc
 - Szereplés: Le Mans 100. évfordulóján, IMSA bajnoki cím, közösségi média sztár
 
-Összegzés
+<p>Összegzés</p>
 A „Rexy” Porsche nemcsak technikai szempontból versenyképes GT3 autó, hanem vizuálisan is az egyik legemlékezetesebb versenygép a modern sportautózásban. Az AO Racing kreatív megközelítése révén a Rexy nemcsak győzelmeket aratott, hanem rajongók ezreit hódította meg világszerte. A 2024-es szezonban elért bajnoki cím és a Le Mans-i szereplés révén a Rexy a Porsche GT program egyik legikonikusabb karakterévé vált.
 
 
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
