--- a/DTMw/Porsche p.html
+++ b/DTMw/Porsche p.html
@@ -7,7 +7,11 @@
     <title>Porsche</title>
 </head>
 <body>
-    <!-- 3D forgó képváltó -->
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
